classDiagram

%% ENUMS
class TCorrel {
  <<enumeration>>
  Aprobado
  Regular
}

class TAlumn {
  <<enumeration>>
  Ingresante
  Avanzado
}

class TCond {
  <<enumeration>>
  Libre
  Regular
  Promocion
}

%% CLASES
class Persona {
  DNI
  Apellido
  Nombre
  Nro_Contacto
  Mail
}

class Docente {
  Nro_Legajo
  Título
}

class Alumno {
  Tipo_Alumno : TAlumn
  + Rendimiento():
}

class Examen_Final {
  Fecha
  Nota
}

class Materia {
  Cod_Materia
  Nombre_Materia
  Anio_materia
  Cod_inscripcion
}

class Carrera {
  Nombre_Carrera
  Cod_Carrera
  Duracion
}

class Correlatividad {
  Correl : TCorrel
}

class CondicionMateria {
  Tipo_cond : Tcond
}

%% HERENCIA
Persona <|-- Docente
Persona <|-- Alumno

%%RELACIONES DOCENTE MATERIA
Docente "1" -- "0..*" Materia : Responsable

%%RELACIONES ALUMNO MATERIA EXAMEN FINAL
Alumno "0..*"--"0..*" Materia
Alumno "0..*".. Examen_Final : Rindio
Examen_Final .. "0..*" Materia

%%RELACIONES DE MATERIA
Materia "0..*"--"0..*" Materia
Materia .. Correlatividad
Correlatividad .. Materia

%% RELACIONES MATERIA ALUMNO CONDICIONMATERIA
Alumno"1..*" -- "1..*" Materia
Alumno .. CondicionMateria
CondicionMateria .. Materia

%% RELACIONES ALUMNO CARRERA DOCENTE
Alumno "1..*" -- "1..*" Carrera
Docente "1..*" -- "1..*" Carrera 
